docs: actualización del README con descripción del proyecto y captura de ejecución